--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <p style="max-width:700px;margin:0 auto 24px;color:#555;line-height:1.6">
     Be first to know when the Heritage Collection drops. Limited pieces per color. Pre-order access goes to waitlist members.
   </p>
-  <form id="signup-form" action="https://formspree.io/f/your-endpoint" method="POST" style="max-width:560px;margin:0 auto;display:grid;grid-template-columns:1fr;gap:12px;text-align:left">
+  <form id="signup-form" action="https://formspree.io/f/xdkdrzno" method="POST" style="max-width:560px;margin:0 auto;display:grid;grid-template-columns:1fr;gap:12px;text-align:left">
     <label style="font-size:0.95rem;color:#333">Name
       <input type="text" name="name" placeholder="Your name" required style="width:100%;margin-top:6px;padding:14px 16px;border-radius:12px;border:1px solid #ddd;background:#fff;">
     </label>
