--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>The Heritage Collection | Hijab Launch</title>
   <style>
     body { font-family: 'Georgia', 'Times New Roman', serif; margin: 0; background: #fcfbf9; color: #222; }
-    header { background: url('https://via.placeholder.com/1400x500?text=Heritage+Collection') center/cover no-repeat; color: white; text-align: center; padding: 150px 20px; }
+    header { background: #000000; color: white; text-align: center; padding: 150px 20px; }
     header h1 { font-size: 3.5rem; margin: 0; font-family: 'Playfair Display', serif; letter-spacing: 1px; }
     header p { font-size: 1.2rem; margin-top: 15px; font-style: italic; }
     .collection { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 40px; padding: 70px; }
