--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <section class="cta" id="waitlist">
   <h2>Join the Waitlist</h2>
   <p style="max-width:700px;margin:0 auto 24px;color:#555;line-height:1.6">
-    Be first to know when the Heritage Collection drops. Limited pieces per color. Pre-order access goes to waitlist members.
+    Be first to know when the Heritage Collection drops. Limited pieces per color. Waitlist members get exclusive early access to pre-order before public launch.
   </p>
   <form id="signup-form" action="https://formspree.io/f/xdkdrzno" method="POST" style="max-width:560px;margin:0 auto;display:grid;grid-template-columns:1fr;gap:12px;text-align:left">
     <label style="font-size:0.95rem;color:#333">Name
