--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </section>
 
 <section class="cta">
-  <h2>Be the First to Wear Heritage</h2>
+  <h2>Be the First to Wear "Heritage"</h2>
   <button>Pre-Order Now</button>
 </section>
 
