--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WAYANI — Chapter 1: Heritage Collection</title>
+  <title>W A Y A N I — Chapter 1: Heritage Collection</title>
   <style>
     /* Typography */
     @font-face {
@@ -121,12 +121,12 @@
           <div class="dropdown" role="menu">
             <a href="#" role="menuitem">Care & Materials</a>
             <a href="#" role="menuitem">Shipping & Returns</a>
-            <a href="#" role="menuitem">About WAYANI</a>
+            <a href="#" role="menuitem">About W A Y A N I</a>
           </div>
         </div>
       </div>
 
-      <div class="brand"><a href="#" aria-label="WAYANI Home">WAYANI</a></div>
+      <div class="brand"><a href="#" aria-label="WAYANI Home">M A I S O N    W A Y A N I</a></div>
 
       <div class="nav-right">
         <div class="menu">
