--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
           <div class="dropdown" role="menu">
             <a href="#" role="menuitem">Care & Materials</a>
             <a href="#" role="menuitem">Shipping & Returns</a>
-            <a href="#" role="menuitem">About W A Y A N I</a>
+            <a href="#" role="menuitem">Story</a>
           </div>
         </div>
       </div>
 
-      <div class="brand"><a href="#" aria-label="WAYANI Home">M A I S O N    W A Y A N I</a></div>
+      <div class="brand"><a href="#" aria-label="WAYANI Home">W A Y A N I</a></div>
 
       <div class="nav-right">
         <div class="menu">
@@ -148,8 +148,8 @@
 
   <!-- Hero Section -->
   <header class="hero">
-    <div class="kicker">Season I</div>
     <h1 class="title">Chapter 1 — Heritage Collection</h1>
+    <div class="kicker">Season I</div>
     <p class="tagline">It’s a legacy in motion — each Chapter a rare edition, crafted with timeless fabrics, designed for the woman who defines elegance through Heritage.</p>
     <div class="subtle-note">6 Shades, 6 Stories</div>
   </header>
@@ -197,7 +197,7 @@
   <section class="cta" id="waitlist">
     <h2>Join the Waitlist</h2>
     <p style="max-width:700px;margin:0 auto 24px;color:#555;line-height:1.6">
-      Be first to know when the Heritage Collection drops. Limited pieces per color. Waitlist members get private early access to pre-order before public launch.
+      Be the first to know when the "Heritage" Collection drops. Limited pieces per color. Waitlist members get private early access to pre-order before public launch.
     </p>
     <form id="signup-form" action="https://formspree.io/f/xdkdrzno" method="POST" style="max-width:560px;margin:0 auto;display:grid;grid-template-columns:1fr;gap:12px;text-align:left">
       <label style="font-size:0.95rem;color:#333">Name
@@ -225,7 +225,7 @@
   <!-- Search Modal -->
   <section id="searchModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="searchTitle" aria-hidden="true">
     <header>
-      <h3 id="searchTitle" style="margin:0;font-size:18px;letter-spacing:0.06em">Search WAYANI</h3>
+      <h3 id="searchTitle" style="margin:0;font-size:18px;letter-spacing:0.06em">Search W A Y A N I</h3>
       <button class="icon-btn" id="closeSearch" aria-label="Close search">✕</button>
     </header>
     <div style="margin-top:12px">
