--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <!-- Top Navigation -->
   <nav class="nav" role="navigation" aria-label="Primary">
     <div class="nav-inner">
-	    <div class="nav-left">
+      <div class="nav-left">
         <div class="menu">
           <button aria-haspopup="true" aria-expanded="false">Chapter 1 —  Heritage</button>
           <div class="dropdown" role="menu">
@@ -123,11 +123,15 @@
             <a href="#" role="menuitem">Care & Materials</a>
             <a href="#" role="menuitem">Shipping & Returns</a>
             <a href="#" role="menuitem">About</a>
-     </div>
+          </div>
+        </div>
+      </div>
 
-      <div class="brand"><a href="#" aria-label="WAYANI Home">W A Y A N I</a></div>
-			
-    </div>
+      <div class="brand"><a href="#" aria-label="WAYANI Home">W A Y A N I</a>
+</div>
+</div>
+        		</div>
+ 
       <div class="nav-right">
         <div class="menu">
           <button id="contactBtn" aria-haspopup="true" aria-expanded="false">Contact</button>
