--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
       border-bottom: 1px solid var(--border);
       padding: 10px 24px;
     }
-    .nav-inner { display: grid; grid-template-columns: 1fr auto 1fr; align-items: center; gap: 16px; max-width: 1200px; margin: 0 auto; }
+.nav-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+.nav-left, .nav-right { display: flex; align-items: center; gap: 24px; }
+.brand { position: absolute; left: 50%; transform: translateX(-50%); }
     .nav-left, .nav-right { display: flex; align-items: center; gap: 18px; }
     .brand { text-align: center; letter-spacing: 0.22em; font-size: 22px; }
     .brand a { color: var(--ink); text-decoration: none; }
