--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     /* Typography */
     @font-face {
       font-family: 'Eurydome W05 Regular';
-      src: local('Eurydome W05 Regular'); /* Fallback if webfont not installed */
+      src: local('Eurydome W05 Regular'); /* Fallback to system if webfont not installed */
       font-weight: 400;
       font-style: normal;
       font-display: swap;
@@ -40,33 +40,22 @@
       border-bottom: 1px solid var(--border);
       padding: 10px 24px;
     }
-    .nav-inner {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 20px;
-      position: relative;
-    }
-    .nav-left, .nav-right { display: flex; align-items: center; gap: 24px; }
-    .brand { 
-      position: absolute; 
-      left: 50%; 
-      transform: translateX(-50%); 
-      text-align: center; 
-      letter-spacing: 0.22em; 
-      font-size: 22px; 
-      font-family: 'Eurydome W05 Regular', serif;
-      font-weight: 400;
-    }
-    .brand a { 
-      color: var(--ink); 
-      text-decoration: none;
-      font-family: 'Eurydome W05 Regular', serif;
-      font-weight: 400;
-      letter-spacing: 0.22em; 
-    }
+/* NAV LAYOUT — desktop */
+.nav-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+.nav-left, .nav-right { display: flex; align-items: center; gap: 24px; }
+
+/* Brand perfectly centered */
+.brand { position: absolute; left: 50%; transform: translateX(-50%); }
+    .nav-left, .nav-right { display: flex; align-items: center; gap: 18px; }
+    .brand { text-align: center; letter-spacing: 0.22em; font-size: 22px; }
+    .brand a { color: var(--ink); text-decoration: none; }
 
     /* Dropdown Menu */
     .menu { position: relative; }
@@ -116,32 +105,72 @@
     .drawer .body { padding: 16px; overflow: auto; flex: 1; }
     .drawer .footer { padding: 16px; border-top: 1px solid var(--border); }
     .btn { display: inline-block; background: var(--accent); color: #fff; padding: 12px 18px; border-radius: 10px; text-decoration: none; }
+	  
+	/* HAMBURGER (hidden on desktop) */
+.hamburger {
+  display: none;
+  width: 36px; height: 36px;
+  align-items: center; justify-content: center;
+  border: 1px solid var(--border); border-radius: 8px;
+  background: transparent; cursor: pointer;
+}
+.hamburger span {
+  display: block; width: 18px; height: 2px; background: var(--ink); position: relative;
+}
+.hamburger span::before, .hamburger span::after {
+  content: ""; position: absolute; left: 0; width: 18px; height: 2px; background: var(--ink);
+}
+.hamburger span::before { top: -6px; }
+.hamburger span::after  { top:  6px; }
 
-    /* Mobile tweaks */
-    @media (max-width: 900px) {
-      .nav-left, .nav-right { display: none; }
-      .brand { position: static; transform: none; margin: 0 auto; }
-      .nav-inner { justify-content: center; }
-    }
+/* MOBILE MENU DRAWER */
+.mobile-drawer {
+  position: fixed; left: 0; top: 0; height: 100vh; width: 84%;
+  max-width: 360px; background: var(--card);
+  border-right: 1px solid var(--border);
+  box-shadow: 10px 0 30px rgba(0,0,0,0.18);
+  transform: translateX(-100%); transition: transform .28s ease;
+  z-index: 85; display: flex; flex-direction: column;
+}
+.mobile-drawer.open { transform: translateX(0); }
+.mobile-drawer header { padding: 14px 16px; border-bottom: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center; }
+.mobile-drawer nav { padding: 12px 8px; display: grid; gap: 6px; }
+.mobile-drawer a, .mobile-drawer .mobile-group > button {
+  padding: 12px 14px; border-radius: 10px; text-decoration: none; color: var(--ink);
+  background: transparent; border: 0; text-align: left; font: inherit; cursor: pointer;
+}
+.mobile-drawer a:hover, .mobile-drawer .mobile-group > button:hover { background: #f6f2ea; }
 
-    /* Search highlight */
-    .results .hit { padding:10px 12px; border-radius:8px; cursor:pointer; }
-    .results .hit:hover { background:#f6f2ea; }
-    .item.flash { outline:2px solid #C9A23F; outline-offset:2px; transition: outline .2s; }
+/* Simple nested groups */
+.mobile-group .mobile-sub { margin-left: 8px; padding-left: 8px; border-left: 1px dashed var(--border); display: grid; gap: 4px; }
+
+/* RESPONSIVE BREAKPOINT */
+@media (max-width: 900px) {
+  .nav-left, .nav-right { display: none; }
+  .hamburger { display: flex; }
+  .brand { position: static; transform: none; margin: 0 auto; }
+  .nav-inner { justify-content: space-between; }
+}
   </style>
 </head>
 <body>
+
   <!-- Top Navigation -->
   <nav class="nav" role="navigation" aria-label="Primary">
     <div class="nav-inner">
+		<!-- Mobile hamburger (shows under 900px) -->
+<button id="hamburgerBtn" class="hamburger" aria-label="Open menu" aria-controls="mobileDrawer" aria-expanded="false">
+  <span></span>
+</button>
+		
       <div class="nav-left">
         <div class="menu">
-          <button aria-haspopup="true" aria-expanded="false">Chapter 1 — Heritage</button>
+          <button aria-haspopup="true" aria-expanded="false">Chapter 1 —  Heritage</button>
           <div class="dropdown" role="menu">
             <a href="#" role="menuitem">Season I</a>
             <a href="#" role="menuitem">Lookbook</a>
             <a href="#" role="menuitem">Story</a>
-            <a href="#" role="menuitem">Editorial Movie</a>
+	<a href="#" role="menuitem">Editorial Movie</a>
           </div>
         </div>
         <div class="menu">
@@ -150,6 +179,14 @@
             <a href="#" role="menuitem">Premium Jersey</a>
             <a href="#" role="menuitem">Bamboo Jersey</a>
           </div>
+        </div>
+        <div class="menu">
+          <button aria-haspopup="true" aria-expanded="false">Info</button>
+          <div class="dropdown" role="menu">
+            <a href="#" role="menuitem">Care & Materials</a>
+            <a href="#" role="menuitem">Shipping & Returns</a>
+            <a href="#" role="menuitem">About</a>
+         </div>
         </div>
       </div>
 
@@ -173,7 +210,43 @@
     </div>
   </nav>
 
-  <!-- Hero -->
+	<!-- Mobile Drawer Menu -->
+<aside id="mobileDrawer" class="mobile-drawer" role="dialog" aria-modal="true" aria-label="Mobile menu" aria-hidden="true">
+  <header>
+    <strong style="letter-spacing:.18em">W A Y A N I</strong>
+    <button id="closeMobile" class="icon-btn" aria-label="Close menu">✕</button>
+  </header>
+  <nav>
+    <div class="mobile-group">
+      <button aria-expanded="false">Chapter 1 : Heritage — Season I</button>
+      <div class="mobile-sub" hidden>
+        <a href="#">Lookbook</a>
+        <a href="#">Story</a>
+        <a href="#">Editorial Film</a>
+      </div>
+    </div>
+    <div class="mobile-group">
+      <button aria-expanded="false">Scarves</button>
+      <div class="mobile-sub" hidden>
+        <a href="#">Premium Jersey</a>
+        <a href="#">Bamboo Jersey</a>
+      </div>
+    </div>
+    <div class="mobile-group">
+      <button aria-expanded="false">Info</button>
+      <div class="mobile-sub" hidden>
+        <a href="#">Care & Materials</a>
+        <a href="#">Shipping & Returns</a>
+        <a href="#">About WAYANI</a>
+      </div>
+    </div>
+    <a href="#">Contact</a>
+    <a href="#" id="openSearchFromMobile">Search</a>
+    <a href="#" id="openCartFromMobile">Cart</a>
+  </nav>
+</aside>
+
+  <!-- Hero Section -->
   <header class="hero">
     <h1 class="title">Chapter 1 — Heritage Collection</h1>
     <div class="kicker">Season I</div>
@@ -183,11 +256,185 @@
 
   <!-- Collection Grid -->
   <section class="collection">
-    <!-- items... -->
+    <div class="item">
+      <img src="https://via.placeholder.com/400x320/000000/FFFFFF?text=Nefertiti+%7C+Black" alt="Nefertiti Hijab" />
+      <h2>Nefertiti (Black)</h2>
+      <p>The Queen of Timeless Power. Elegant, confident, eternal.</p>
+    </div>
+
+    <div class="item">
+      <img src="https://via.placeholder.com/400x320/B38B6D/FFFFFF?text=Marrakech+%7C+Taupe" alt="Marrakech Hijab" />
+      <h2>Marrakech (Taupe)</h2>
+      <p>The Warmth of the Medina. A perfect neutral for every occasion.</p>
+    </div>
+
+    <div class="item">
+      <img src="https://via.placeholder.com/400x320/E6D2B5/333333?text=Sahara+%7C+Beige" alt="Sahara Hijab" />
+      <h2>Sahara (Beige)</h2>
+      <p>The Desert’s Eternal Light. Calm, grounding, endlessly versatile.</p>
+    </div>
+
+    <div class="item">
+      <img src="https://via.placeholder.com/400x320/F9F6EE/333333?text=Maxima+%7C+Cream" alt="Maxima Hijab" />
+      <h2>Maxima (Cream)</h2>
+      <p>Modern Royalty, Pure Grace. Inspired by Queen Máxima’s elegance.</p>
+    </div>
+
+    <div class="item">
+      <img src="https://via.placeholder.com/400x320/C08081/FFFFFF?text=Cleopatra+%7C+Rose" alt="Cleopatra Hijab" />
+      <h2>Cleopatra (Dusty Rose)</h2>
+      <p>Feminine Strength, Eternal Beauty. Romantic yet commanding.</p>
+    </div>
+
+    <div class="item">
+      <img src="https://via.placeholder.com/400x320/708238/FFFFFF?text=Andalus+%7C+Olive" alt="Andalus Hijab" />
+      <h2>Andalus (Olive)</h2>
+      <p>The Legacy of Al-Andalus. Heritage, wisdom, and grace.</p>
+    </div>
   </section>
 
+  <!-- Waitlist / Email Signup -->
+  <section class="cta" id="waitlist">
+    <h2>Join the Waitlist</h2>
+    <p style="max-width:700px;margin:0 auto 24px;color:#555;line-height:1.6">
+      Be the first to know when the "Heritage" Collection drops. Limited pieces per color. Waitlist members get private early access to pre-order before public launch.
+    </p>
+    <form id="signup-form" action="https://formspree.io/f/xdkdrzno" method="POST" style="max-width:560px;margin:0 auto;display:grid;grid-template-columns:1fr;gap:12px;text-align:left">
+      <label style="font-size:0.95rem;color:#333">Name
+        <input type="text" name="name" placeholder="Your name" required style="width:100%;margin-top:6px;padding:14px 16px;border-radius:12px;border:1px solid var(--border);background:#fff;" />
+      </label>
+      <label style="font-size:0.95rem;color:#333">Email
+        <input type="email" name="email" placeholder="you@example.com" required style="width:100%;margin-top:6px;padding:14px 16px;border-radius:12px;border:1px solid var(--border);background:#fff;" />
+      </label>
+      <label style="display:flex;align-items:flex-start;gap:10px;color:#555;font-size:0.9rem">
+        <input type="checkbox" name="consent" required style="margin-top:4px" /> I agree to receive emails about launches and offers. I can unsubscribe anytime.
+      </label>
+      <button type="submit" style="background:#111;color:#fff;padding:14px 20px;border:none;border-radius:50px;font-size:1rem;cursor:pointer;letter-spacing:0.5px">Notify Me</button>
+      <p id="form-status" style="margin:8px 0 0;color:#2f7a3e;display:none">Thank you! Please check your inbox to confirm.</p>
+    </form>
+  </section>
+
+  <section class="cta">
+    <h2>Be The First To Wear "Heritage"</h2>
+    <button>Pre-Order Now</button>
+  </section>
+
+  <!-- Overlays -->
+  <div id="overlay" class="overlay" aria-hidden="true"></div>
+
+  <!-- Search Modal -->
+  <section id="searchModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="searchTitle" aria-hidden="true">
+    <header>
+      <h3 id="searchTitle" style="margin:0;font-size:18px;letter-spacing:0.06em">Search W A Y A N I</h3>
+      <button class="icon-btn" id="closeSearch" aria-label="Close search">✕</button>
+    </header>
+    <div style="margin-top:12px">
+      <input type="search" id="searchInput" placeholder="Search scarves, collections, stories…" />
+    </div>
+    <div class="results" id="searchResults"></div>
+  </section>
+
+  <!-- Cart Drawer -->
+  <aside id="cartDrawer" class="drawer" role="dialog" aria-modal="true" aria-labelledby="cartTitle" aria-hidden="true">
+    <header>
+      <h3 id="cartTitle" style="margin:0;font-size:18px;letter-spacing:0.06em">Your Cart</h3>
+      <button class="icon-btn" id="closeCart" aria-label="Close cart">✕</button>
+    </header>
+    <div class="body" id="cartBody">
+      <p style="color:#555">Your cart is empty.</p>
+      <div style="margin-top:16px; display:grid; gap:10px">
+        <div style="display:flex; align-items:center; gap:12px; border:1px solid var(--border); border-radius:12px; padding:10px">
+          <div style="width:54px; height:54px; background:#000"></div>
+          <div style="flex:1">
+            <div style="font-size:14px">Nefertiti (Black)</div>
+            <div style="font-size:13px; color:#666">Premium Jersey</div>
+          </div>
+          <button class="icon-btn" title="Add">＋</button>
+        </div>
+        <div style="display:flex; align-items:center; gap:12px; border:1px solid var(--border); border-radius:12px; padding:10px">
+          <div style="width:54px; height:54px; background:#B38B6D"></div>
+          <div style="flex:1">
+            <div style="font-size:14px">Marrakech (Taupe)</div>
+            <div style="font-size:13px; color:#666">Bamboo Jersey</div>
+          </div>
+          <button class="icon-btn" title="Add">＋</button>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <a href="#" class="btn" style="width:100%; text-align:center">Checkout</a>
+    </div>
+  </aside>
+
   <script>
-    // Overlay + Modal logic (same as your last version)
+    // Elements
+    const overlay = document.getElementById('overlay');
+    const searchBtn = document.getElementById('searchBtn');
+    const searchModal = document.getElementById('searchModal');
+    const closeSearch = document.getElementById('closeSearch');
+    const cartBtn = document.getElementById('cartBtn');
+    const cartDrawer = document.getElementById('cartDrawer');
+    const closeCart = document.getElementById('closeCart');
+
+    function openOverlay() { overlay.classList.add('open'); overlay.setAttribute('aria-hidden','false'); }
+    function closeOverlay() { overlay.classList.remove('open'); overlay.setAttribute('aria-hidden','true'); }
+
+    function openModal(el){ el.classList.add('open'); el.setAttribute('aria-hidden','false'); openOverlay(); }
+    function closeModal(el){ el.classList.remove('open'); el.setAttribute('aria-hidden','true'); closeOverlay(); }
+
+    // Search open/close
+    if (searchBtn) searchBtn.addEventListener('click', () => openModal(searchModal));
+    if (closeSearch) closeSearch.addEventListener('click', () => closeModal(searchModal));
+
+    // Cart open/close
+    if (cartBtn) cartBtn.addEventListener('click', () => openModal(cartDrawer));
+    if (closeCart) closeCart.addEventListener('click', () => closeModal(cartDrawer));
+
+    // Close when clicking overlay
+    overlay.addEventListener('click', () => { closeModal(searchModal); closeModal(cartDrawer); });
+
+    // ESC to close
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') { closeModal(searchModal); closeModal(cartDrawer); }
+    });
+	  // Mobile menu toggle
+const hamburgerBtn = document.getElementById('hamburgerBtn');
+const mobileDrawer = document.getElementById('mobileDrawer');
+const closeMobile = document.getElementById('closeMobile');
+
+function openMobileMenu() {
+  mobileDrawer.classList.add('open');
+  mobileDrawer.setAttribute('aria-hidden','false');
+  openOverlay();
+  hamburgerBtn.setAttribute('aria-expanded','true');
+}
+function closeMobileMenu() {
+  mobileDrawer.classList.remove('open');
+  mobileDrawer.setAttribute('aria-hidden','true');
+  closeOverlay();
+  hamburgerBtn.setAttribute('aria-expanded','false');
+}
+
+if (hamburgerBtn) hamburgerBtn.addEventListener('click', openMobileMenu);
+if (closeMobile) closeMobile.addEventListener('click', closeMobileMenu);
+overlay.addEventListener('click', closeMobileMenu);
+document.addEventListener('keydown', (e) => { if (e.key === 'Escape') closeMobileMenu(); });
+
+// Expand/collapse nested groups
+document.querySelectorAll('.mobile-group > button').forEach(btn => {
+  btn.addEventListener('click', () => {
+    const sub = btn.nextElementSibling;
+    const expanded = btn.getAttribute('aria-expanded') === 'true';
+    btn.setAttribute('aria-expanded', String(!expanded));
+    sub.hidden = expanded;
+  });
+});
+
+// Open existing Search/Cart from mobile items
+const openSearchFromMobile = document.getElementById('openSearchFromMobile');
+const openCartFromMobile = document.getElementById('openCartFromMobile');
+if (openSearchFromMobile) openSearchFromMobile.addEventListener('click', (e) => { e.preventDefault(); closeMobileMenu(); openModal(searchModal); });
+if (openCartFromMobile) openCartFromMobile.addEventListener('click', (e) => { e.preventDefault(); closeMobileMenu(); openModal(cartDrawer); });
   </script>
 </body>
 </html>
