--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </div>
       </div>
 
-      <div class="brand"><a href="#" aria-label="WAYANI Home">W A Y A N I</a></div>
+      <div class="brand"><a href="#" aria-label="WAYANI Home">W A Y A̲ N I</a></div>
 
       <div class="nav-right">
         <div class="menu">
@@ -246,7 +246,7 @@
 	<!-- Mobile Drawer Menu -->
 <aside id="mobileDrawer" class="mobile-drawer" role="dialog" aria-modal="true" aria-label="Mobile menu" aria-hidden="true">
   <header>
-    <strong style="letter-spacing:.18em">W A Y A N I</strong>
+    <strong style="letter-spacing:.18em">W A Y A̲ N I</strong>
     <button id="closeMobile" class="icon-btn" aria-label="Close menu">✕</button>
   </header>
   <nav>
@@ -270,7 +270,7 @@
       <div class="mobile-sub" hidden>
         <a href="#">Care & Materials</a>
         <a href="#">Shipping & Returns</a>
-        <a href="#">About WAYANI</a>
+        <a href="#">About</a>
       </div>
     </div>
     <a href="#">Contact</a>
@@ -358,7 +358,7 @@
   <!-- Search Modal -->
   <section id="searchModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="searchTitle" aria-hidden="true">
     <header>
-      <h3 id="searchTitle" style="margin:0;font-size:18px;letter-spacing:0.06em">Search W A Y A N I</h3>
+      <h3 id="searchTitle" style="margin:0;font-size:18px;letter-spacing:0.06em">Search W A Y A̲ N I</h3>
       <button class="icon-btn" id="closeSearch" aria-label="Close search">✕</button>
     </header>
     <div style="margin-top:12px">
@@ -486,7 +486,7 @@ window.addEventListener('scroll', () => {
   <div class="footer-grid">
     <!-- Newsletter -->
     <div class="newsletter">
-      <h4>Inspire me with the latest WAYANI news</h4>
+      <h4>Inspire me with the latest W A Y A̲ N I news</h4>
       <form action="https://formspree.io/f/xdkdrzno" method="POST" aria-label="Newsletter signup">
         <input type="email" name="email" placeholder="Email" required>
         <button type="submit">Subscribe</button>
@@ -512,7 +512,7 @@ window.addEventListener('scroll', () => {
 
     <!-- The House of WAYANI -->
     <div class="footer-col">
-      <h4>The House of WAYANI</h4>
+      <h4>The House of W A Y A̲ N I</h4>
       <a href="#">Sustainability</a>
       <a href="#">Ethics & Compliance</a>
       <a href="#">Careers</a>
@@ -531,7 +531,8 @@ window.addEventListener('scroll', () => {
 
   <div class="footer-bottom">
     <!-- Centered brand at bottom -->
-    <div class="footer-brand">W A Y A N I</div>
+    <div class="footer-brand">W A Y A̲ N I</div>
+	  <div>
     <div class="footer-meta">© WAYANI 2025 All rights reserved.</div>
     <div class="footer-geo">Country/Region: <a href="#">Belgium (English)</a></div>
   </div>
