--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ window.addEventListener('scroll', () => {
   <div class="footer-grid">
     <!-- Newsletter -->
     <div class="newsletter">
-      <h4>W A Y A N I whispers: timeless drops, first to you.</h4>
+      <h4>WAYANI Whispers: Timeless drops, First to you. SEASON II COMING SOON..</h4>
       <form action="https://formspree.io/f/xdkdrzno" method="POST" aria-label="Newsletter signup">
         <input type="email" name="email" placeholder="Email" required>
         <button type="submit">Subscribe</button>
@@ -512,7 +512,7 @@ window.addEventListener('scroll', () => {
 
     <!-- The House of WAYANI -->
     <div class="footer-col">
-      <h4>The House of  W A Y A N I</h4>
+      <h4>The House of</h4>
       <a href="#">Sustainability</a>
       <a href="#">Ethics & Compliance</a>
       <a href="#">Careers</a>
