--- a/index.html
+++ b/index.html
@@ -184,6 +184,66 @@
   .newsletter form { flex-direction:column; }
   .newsletter button { width:100%; }
 }
+/* === WAYANI Luxury Typography (overrides) === */
+body {
+  font-weight: 300;           /* lighter */
+  color: #111;                /* softer than pure black */
+  line-height: 1.6;
+  letter-spacing: 0.02em;
+}
+
+h1, h2, h3, h4, h5 {
+  font-weight: 400;           /* no bold */
+  letter-spacing: 0.05em;
+  color: #111;
+  margin-top: 1.2em;
+  margin-bottom: 0.6em;
+}
+
+a { color: #111; text-decoration: none; font-weight: 300; }
+a:hover { opacity: 0.7; }
+
+/* Footer polish (matches typography) */
+.site-footer { background:#f8f6f3; border-top:1px solid var(--border); color:#222; padding: 48px 24px; }
+.footer-grid { max-width:1200px; margin:0 auto; display:grid; grid-template-columns: 1.2fr 1fr 1fr 1fr; gap:32px; }
+.newsletter h4 { margin:0 0 12px; font-size:20px; letter-spacing:.05em; font-weight:400; }
+.newsletter form { display:flex; gap:10px; }
+.newsletter input { flex:1; padding:12px 14px; border:1px solid var(--border); border-radius:10px; font:inherit; background:#fff; font-weight:300; }
+.newsletter button { padding:12px 18px; border:0; border-radius:10px; background:#111; color:#fff; cursor:pointer; font-weight:400; }
+
+.footer-col h4 { margin:0 0 12px; font-size:18px; letter-spacing:.05em; font-weight:400; }
+.footer-col a { display:block; text-decoration:none; color:#333; padding:6px 0; font-weight:300; }
+.footer-col a:hover { text-decoration:underline; }
+
+.footer-social { margin-top:14px; display:flex; flex-wrap:wrap; gap:12px; font-size:14px; }
+.footer-social a { color:#666; text-decoration:none; }
+.footer-social a:hover { text-decoration:underline; }
+
+.footer-bottom { max-width:1200px; margin:36px auto 0; padding-top:24px; border-top:1px solid var(--border); text-align:center; }
+.footer-brand { letter-spacing:.22em; font-size:18px; margin-bottom:8px; font-weight:400; }
+.footer-meta { color:#777; font-size:13px; font-weight:300; }
+.footer-geo { margin-top:8px; font-size:13px; color:#666; }
+.footer-geo a { color:#666; text-decoration:none; }
+.footer-geo a:hover { text-decoration:underline; }
+
+@media (max-width: 900px) {
+  .footer-grid { grid-template-columns: 1fr; }
+  .newsletter form { flex-direction:column; }
+  .newsletter button { width:100%; }
+}
+
+/* Search results previews */
+.results .hit {
+  display:flex; align-items:center; gap:12px;
+  padding:10px 12px; border-radius:8px; cursor:pointer;
+}
+.results .hit:hover { background:#f6f2ea; }
+.results .thumb { width:48px; height:48px; border-radius:6px; overflow:hidden; flex:0 0 48px; background:#eee; }
+.results .thumb img { width:100%; height:100%; object-fit:cover; display:block; }
+.results .meta { display:grid; gap:2px; }
+.results .title { font-size:14px; font-weight:400; letter-spacing:.03em; }
+.results .desc { font-size:12px; color:#666; }
+.item.flash { outline:2px solid #C9A23F; outline-offset:2px; transition: outline .2s; }
   </style>
 </head>
 <body>
@@ -486,7 +546,7 @@ window.addEventListener('scroll', () => {
   <div class="footer-grid">
     <!-- Newsletter -->
     <div class="newsletter">
-      <h4>WAYANI Whispers: Timeless drops, First to you. SEASON II COMING SOON..</h4>
+      <h4>WAYANI whispers: timeless drops, first to you.</h4>
       <form action="https://formspree.io/f/xdkdrzno" method="POST" aria-label="Newsletter signup">
         <input type="email" name="email" placeholder="Email" required>
         <button type="submit">Subscribe</button>
@@ -512,7 +572,7 @@ window.addEventListener('scroll', () => {
 
     <!-- The House of WAYANI -->
     <div class="footer-col">
-      <h4>The House of</h4>
+      <h4>The House of W A Y A N I</h4>
       <a href="#">Sustainability</a>
       <a href="#">Ethics & Compliance</a>
       <a href="#">Careers</a>
@@ -530,9 +590,9 @@ window.addEventListener('scroll', () => {
   </div>
 
   <div class="footer-bottom">
-    <!-- Centered brand at bottom -->
+    <!-- Centered brand at bottom (use SVG here if you prefer) -->
     <div class="footer-brand">W A Y A N I</div>
-    <div class="footer-meta">© W A Y A N I 2025 All rights reserved.</div>
+    <div class="footer-meta">© W A Y A N I. All rights reserved.</div>
     <div class="footer-geo">Country/Region: <a href="#">Belgium (English)</a></div>
   </div>
 </footer>
